--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,5 +38,37 @@
     }
   }
 
+  .paginationBttns {
+    width: 80%;
+    height: 40px;
+    margin-top: 30px;
+    list-style: none;
+    display: flex;
+    justify-content: left;
+  }
   
+  .paginationBttns a {
+    padding: 10px;
+    margin: 8px;
+    
+    border-radius: 5px;
+    border: 1px solid #2b2eff;
+    color: #2b2eff;
+    cursor: pointer;
+  }
+  
+  .paginationBttns a:hover {
+    color: white;
+    background-color: #2b2eff;
+  }
+  
+  .paginationActive a {
+    color: white;
+    background-color: #2b2eff;
+  }
+  
+  /* .paginationDisabled a {
+    color: grey;
+    background-color: grey;
+  }  */
   
