--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,5 +82,16 @@
     color:blue
   }
 
+/* lazy loading */
 
+.loading{
+  filter: blur(10px);
+  clip-path: inset(0);
+}
+.loaded{
+  filter:blur(0px);
+  transition: filter 0.5s linear;
+}
+
+/* lazy loading */
   
